<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_color"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_In"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:padding="15dp"
                android:hint="@string/email"
                android:id="@+id/email_login"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:id="@+id/password_login"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/log_in"
                android:id="@+id/btn_login"
                android:backgroundTint="@color/login"
                android:textAppearance="?android:textAppearanceMedium"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/forget_password"
                android:textColor="@color/white"
                android:text="@string/forget_password"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/signup_reg"
                android:textColor="@color/white"
                android:text="@string/don_t_have_an_account_sign_up"
                android:padding="5dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>