<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DashboardFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_dark"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@android:color/white"
                        android:text="@string/income_fragment"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_dark"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@android:color/white"
                        android:text="@string/expense_fragment"
                        />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@android:color/holo_green_dark"
                        android:text="0.00"
                        android:id="@+id/income_set_result"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@android:color/holo_red_dark"
                        android:text="0.00"
                        android:id="@+id/expense_set_result"
                        />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:padding="10dp"
                    />
                
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/recycler_income">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/expense"
                    android:textAppearance="?android:textAppearanceLarge" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/recycler_expense">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="160dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_fragment"
                android:id="@+id/expense_ft_text"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@android:color/holo_red_dark"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/expense"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="90dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_fragment"
                android:id="@+id/income_ft_text"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:background="@android:color/holo_green_dark"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"/>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@android:color/holo_green_dark"
                android:elevation="6dp"
                app:fabSize="mini"
                app:pressedTranslationZ="12dp"
                android:visibility="invisible"
                android:src="@drawable/income"/>


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_main_plus_btn"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:src="@drawable/income"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>